[package]
name = "lzw_kernel"
version = "0.1.0"
authors = ["Holmer, Rens <rens.holmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rayon = "1.2.0"
clap = "2.33.0"
bio = "0.28.2"
ndarray = { version = "0.13.0", features = ["rayon"] }